<!--
  ~ Copyright (c) 2024. Created by Alexsander Fernandes at 1/3. All rights reserved.
  ~ GitHub: https://github.com/alexsanderfer/
  ~ Portfolio: https://alexsanderfer.netlify.app/
  -->

<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="enterYourWeight">Digite o seu peso. Ex.: 60.5</string>
    <string name="enterYourHeight">Digite a sua altura. Ex.: 1.70</string>
    <string name="decimal">Use \".\" (ponto) para casas decimais.</string>
    <string name="calculateIMC">Calcular IMC</string>
    <string name="diagnosis">Diagnóstico</string>
    <string name="enterWeightAndHeight">Digite o seu peso e altura</string>
    <string name="reportedWeight">Peso informado: %1$s</string>
    <string name="reportedHeight">Altura informada: %1$s</string>
    <string name="error_weight">Digite o seu peso</string>
    <string name="error_height">Digite a sua altura</string>
    <string name="low_weight"><![CDATA[Magreza! < 54.1 Kg]]></string>
    <string name="normal_weight"><![CDATA[Normal! 54.1 a 72.8 Kg]]></string>
    <string name="overweight"><![CDATA[Sobrepeso! 72.8 a 87.7 Kg]]></string>
    <string name="obese_class_1"><![CDATA[Obesidade! > 87.7 Kg]]></string>
    <string name="imc_result">IMC: %d \n - \n %s</string>
    <string name="note">O cálculo de IMC não considera o sexo, idade e a composição corporal. Por esse motivo, pessoas com muita massa muscular, como alguns atletas, podem apresentar um IMC acima do normal. O ideal é consultar um nutricionista para fazer uma avaliação mais detalhada.</string>
    <string name="obese_class_2">Obesidade grau II</string>
    <string name="obese_class_3">Obesidade grau III</string>
</resources>